# huffmanIde

./: .gitignore  Certificates.p12  Feature Dump.md  Help.txt  VersionListing.txt  package-lock.json  package.json  pword.txt  setup-signing.sh  tsconfig.json  updates.json
.github/workflows/: macos-build.yml
features/analytics/: codereview.txt
marketing/: Ann Handley.txt  Neilpatel.txt  combined.txt  developers_info_scrape(github_bestmatch).py  developers_info_scrape(pypi).py  elon.txt  pypi_packages1.csv  pypi_packages2.csv  pypi_packages3.csv  pypi_packages4.csv  pypi_packages5.csv  pypi_packages6.csv  pypi_packages7.csv  pypi_packages8.csv  steve_jobs.txt
marketing/UI and UX /: Loved it.txt
pitchdecks/: new_version.txt  overview.txt  pitchversio1.txt  pitchversion0.1.md
src/: AnalyticsDashboard.txt  App.tsx  App.txt  AutoUpdater.tsx  BlockExecutionPannel.tsx  BlockHeader.tsx  BlockIDESyncHandler.tsx  Blocks.tsx  BlocksListPanel.tsx  CanvasContainer.tsx  CanvasGrid.tsx  CanvasInfoPanel.tsx  CanvasWrapper.tsx  CodeBlock.tsx  CodeFlowAnimation.tsx  ComingSoon.tsx  Connections.tsx  CreateFileButton.tsx  CursorHighlighter.tsx  CustomIDE.tsx  DesignCanvas.tsx  DesignCanvasManager.tsx  Directory.tsx  DisableZoom.tsx  DocumentationDialog.tsx  DocumentationList.tsx  DocumentationPanel.tsx  DraggableWrapper.tsx  EditorContext.tsx  EditorCore.tsx  EditorHeader.tsx  ExecutePython.tsx  FloatingEditorActions.tsx  FocusedTestPanel.tsx  GitCloneButton.tsx  Home.tsx  IDEDialog.tsx  IDEHome.tsx  InteractiveGridBackground.tsx  KeyboardNavigation.ts  (+44 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf copy.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/analytics/: mod.rs
src/IDEDialog/: AnalyticsPanel.tsx  CodeGenerationPanel.tsx  DocumentationGenerator.ts  DocumentationPanel.tsx  IDEDialog.tsx  MainEditor.tsx  RunButtonPanel.tsx  TestRecordDialog.tsx
src/ai_integration/: AISetup.tsx  ModelSelector.tsx  ModelTester.tsx  OllamaStatusButton.tsx  StatusLog.tsx  SystemStatus.tsx  constants.ts  coreFunctions.ts  executeOllama.ts  getModelInfo.ts  ollamaStatus.ts  sampletestcodeaiworked.tsx  saveModelInfo.ts  types.ts
src/developer_community/: Community.tsx  EnhancedCommunity.tsx
src/git_integration/: GitCloneButton.tsx  GitCloneModal.tsx
src/health_analytics/: BreakTracker.ts  HealthAnalytics  copy.tsx  HealthAnalytics .tsx  HealthMetricsService.tsx  HealthRecommendationsCard.tsx  MentalHealthDashboard.tsx  MetricCard.tsx  SessionGraph.tsx  StressPatternCard.tsx  StressPatternService.ts  TimeMetricsDashboard.tsx  TrackerComponents.tsx  WaterTracker.ts  codingMentalHealthTracker.ts  exerciseTracker.ts  healthMetricsData.ts  liquidIntakeTracker.ts  personalMetricsTracker.ts  timeMetricsTracker.ts  useDateAwareMetrics.ts  useSessionMetrics.ts
src/newversion/: Block1.tsx  Canvas.tsx  SubBlock.tsx
(+26 files in other folders)
