[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "fs-write-file", "fs-create-dir", "fs-remove-file", "fs-read-dir", "fs-exists", "fs-remove-dir", "fs-read-file",
    "notification-all",
    "http-request",
    "shell-all",
    "dialog-all",
    "path-all"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
geoip2 = "0.1.0"
sys-info = "0.9"
num_cpus = "1.15"

# New dependencies for Git functionality
git2 = "0.18"  # For advanced Git operations if needed
tempfile = "3.8"  # For handling temporary directories
thiserror = "1.0"  # For error handling
dunce = "1.0"  # For path normalization
notify = "6.1"  # For file system monitoring if needed

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch
# between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
